--- a/_posts/2019-11-04-LeetCode刷题总结.md
+++ b/_posts/2019-11-04-LeetCode刷题总结.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      LeetCode刷题总结
-subtitle:   每周刷题心得总结
+title:      2019-11-04-LeetCode刷题总结
+subtitle:   刷题笔记
 date:       2019-11-04
 author:     AndyCao
 header-img: img/post-bg-ios9-web.jpg
